test/fail/invaliddecl1.min
program
    function forward number favorite done;
    function string favorite do return "42"
start
end
